gitops/platform/traefik-manager/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-manager
  namespace: traefik-manager
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik-manager.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
          namespace: traefik
      services:
        - kind: Service
          name: traefik-manager
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-manager-wiredoor
  namespace: traefik-manager
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: Host(`traefik-manager.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
          namespace: traefik
      services:
        - kind: Service
          name: traefik-manager
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-manager-tailscale
  namespace: traefik-manager
spec:
  entryPoints:
    - webtailscale
  routes:
    - kind: Rule
      match: Host(`traefik-manager.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
          namespace: traefik
      services:
        - kind: Service
          name: traefik-manager
          port: 80
  tls: {}
